--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">About Us</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Download
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Windows</a></li>
+                  <li><a class="dropdown-item" href="#">Windows11</a></li>
                   <li><a class="dropdown-item" href="#">Mac OS</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Linux</a></li>
